# juglans

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  docker-compose.yml  install.sh  juglans.toml  llm.md  test.jgagent  test.jgflow  test.jgprompt  test_output.jg  test_output2.jg  test_simple.jg
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docker.yml  docs.yml  release.yml
benches/: class_perf.rs
docs/: Dockerfile  README.md  SUMMARY.md  book.toml  juglans-vs-python.md
docs/appendix/: comparisons.md  glossary.md  troubleshooting.md
docs/deployment/: docker.md
docs/examples/: README.md  basic-chat.md  intent-router.md  rag-pipeline.md  tool-calling.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: agent-syntax.md  build-web-api.md  concepts.md  conditionals.md  connect-ai.md  debugging.md  deploy-docker.md  error-handling.md  integrate-python.md  juglans-test.md  loops.md  prompt-syntax.md  testing.md  tools.md  use-mcp.md  workflow-composition.md  workflow-syntax.md
docs/integrations/: jug0.md  mcp.md  python.md  web-server.md
docs/reference/: agent-spec.md  builtins.md  cli.md  config.md  context.md  expressions.md  prompt-spec.md  workflow-spec.md
docs/tutorials/: ai-chat.md  branching.md  composition.md  error-handling.md  full-project.md  hello-workflow.md  http-client.md  loops.md  prompts.md  variables.md
examples/: DESIGN_PATTERNS.md  README.md  ai_tool_test.jg  ai_tools_chat_demo.jg  api_test.jg  associated_fn_demo.jg  builtin_test.jg  call_test.jg  chat_tools_map_demo.jg  class_pydantic_style.jg  class_request_response.jg  decorator_simple_test.jg  device_screenshot.jg  error_handling_test.jg  finance_test.jg  foreach_struct_test.jg  http_client_demo.jg  impl_trait_demo.jg  mcp_e2e_test.jg  mcp_test.jg  mcp_test_server.py  python_error_test.jg  python_error_test.jgflow  python_test.jg  python_test.jgflow  serve_test.jg  switch_test.jg  switch_test.jgflow  test.jg  test.jgagent  test.jgflow  test.jgprompt  test.jgx  test_missing_comma.jg  test_missing_comma_detailed.jg  test_missing_comma_simple.jg  test_syntax_errors.jg  test_syntax_errors.jgflow  test_syntax_errors2.jg  tool-reference-example.jg  (+3 more)
examples/agents/: README.md  analyst.jgagent  assistant.jgagent  test-worker.jgagent  test.jgagent  tool-agent.jgagent
examples/prompts/: README.md  analysis.jgx  greeting.jgprompt  test.jgprompt
examples/pure-agents/: README.md  deepseek.jgagent
examples/tools/: data-tools.json  web-tools.json
examples/workflows/: README.md  batch-process.jg  router.jg  router.jgflow  simple-chat.jg  test.jgflow
jug0/: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
jug0/db/: Cargo.toml
jug0/db/src/: lib.rs  m20240101_000001_init.rs  m20240102_000001_seed.rs  m20240103_000001_agent_endpoint.rs  m20240104_000001_workflow_runs.rs  m20240105_000001_user_quotas.rs  m20240106_000001_deploys.rs  m20240107_000001_drop_tier.rs
jug0/src/: auth.rs  errors.rs  lib.rs  main.rs  scheduler.rs
jug0/src/entities/: agents.rs  api_keys.rs  chats.rs  deploys.rs  handles.rs  messages.rs  mod.rs  model_sync_log.rs  models.rs  organizations.rs  prompts.rs  user_quotas.rs  users.rs  workflow_runs.rs  workflows.rs
jug0/src/handlers/: admin.rs  agents.rs  api_keys.rs  auth.rs  context.rs  deploys.rs  embeddings.rs  files.rs  handles.rs  mcp_endpoint.rs  memories.rs  messages.rs  mod.rs  models.rs  organizations.rs  prompts.rs  resources.rs  search.rs  usage.rs  users.rs  vectors.rs  workflows.rs
jug0/src/handlers/chat/: helpers.rs  logic.rs  mod.rs  types.rs
jug0/src/providers/: mod.rs
jug0/src/providers/cache/: mod.rs  redis.rs
jug0/src/providers/embedding/: mod.rs  openai.rs  qwen.rs
jug0/src/providers/llm/: anthropic.rs  byteplus.rs  claude_code.rs  deepseek.rs  factory.rs  gemini.rs  mod.rs  qwen.rs  xai.rs
jug0/src/providers/memory/: mod.rs  qdrant.rs
jug0/src/providers/search/: mod.rs  tavily.rs
jug0/src/providers/storage/: mod.rs  postgres.rs
jug0/src/repositories/: agents.rs  mod.rs  prompts.rs
jug0/src/request/: agents.rs  api_keys.rs  auth.rs  chats.rs  deploys.rs  embeddings.rs  memories.rs  mod.rs  models.rs  organizations.rs  prompts.rs  users.rs  vectors.rs  workflows.rs
jug0/src/response/: admin.rs  agents.rs  api_keys.rs  auth.rs  chats.rs  common.rs  embeddings.rs  mod.rs  models.rs  organizations.rs  prompts.rs  resources.rs  usage.rs  users.rs  workflows.rs
jug0/src/services/: cache.rs  deploy.rs  mcp.rs  mod.rs  models.rs  qdrant.rs  quota.rs  search.rs  template.rs  vector_db.rs
jug0/src/services/memory/: mod.rs  prompts.rs  service.rs  types.rs  utils.rs
jug0/static/: admin.html
sdk/python/: juglans.py
src/: doctest.rs  lib.rs  main.rs  runner.rs  templates.rs
src/adapters/: discord.rs  feishu.rs  mod.rs  telegram.rs  wechat.rs
src/builtins/: ai.rs  database.rs  device.rs  devtools.rs  history.rs  http.rs  http_client.rs  mod.rs  network.rs  oauth.rs  system.rs  testing.rs
src/core/: agent.pest  agent_parser.rs  context.rs  executor.rs  expr.pest  expr_ast.rs  expr_eval.rs  expr_parser.rs  graph.rs  instance_arena.rs  jvalue.rs  jwl.pest  jwl_lexer.rs  jwl_parser.rs  jwl_token.rs  macro_expand.rs  manifest_parser.rs  mod.rs  parser.rs  prompt.pest  prompt_parser.rs  renderer.rs  resolver.rs  skill_parser.rs  stdlib.rs  tool_loader.rs  type_checker.rs  types.rs  validator.rs
src/lsp/: completion.rs  diagnostics.rs  document.rs  mod.rs  navigation.rs  server.rs
src/providers/: mod.rs
src/registry/: auth.rs  cache.rs  client.rs  installer.rs  lock.rs  mod.rs  package.rs  server.rs  store.rs
std/: ai.jg  device.jg  mcps.jg  telegram.jg
stdlib/: api.jg  finance.jg  http.jg  oauth.jg
tests/: example_test.jg  test_history_store.rs  test_local_deepseek.jg  test_local_runtime.rs
(+55 files in other folders)
