[package]
name = "juglans" # 【修改】从 jwl_compiler 改为 juglans
version = "0.1.1"
edition = "2021"
default-run = "juglans"
description = "Compiler and runtime for Juglans Workflow Language (JWL)"
license = "MIT"

[[bin]]
name = "juglans"
path = "src/main.rs"
required-features = ["native"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
pest = "2.7"
pest_derive = "2.7"
rhai = { version = "1.18", features = ["serde", "sync"] }
petgraph = "0.6"
json-patch = "1.2"
glob = "0.3"
tracing = "0.1"
futures = "0.3"

# --- 2. WASM 专用依赖 (仅在 wasm32 目标时编译) ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# --- 3. Native 专用依赖 (非 wasm32 目标) ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eventsource-stream = "0.2"
async-trait = "0.1"
pathdiff = "0.2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
# 【新增】tokio-stream 依赖
tokio-stream = "0.1"

[features]
default = ["native"]
native = []